# data-access-layer

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CNAME  Makefile  README.md  __init__.py  build-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt  setup.py  tags  test-requirements.txt  tox.ini  versions.json
2.5.0/: .buildinfo  dal.api.html  dal.archive.html  dal.backup.html  dal.classes.common.html  dal.classes.filesystem.html  dal.classes.html  dal.classes.protocols.html  dal.classes.utils.html  dal.data.html  dal.data.shared.html  dal.db_handlers.html  dal.exceptions.html  dal.helpers.flow.html  dal.helpers.html  dal.html  dal.models.html  dal.movaidb.html  dal.plugins.classes.html  dal.plugins.html  dal.plugins.persistence.filesystem.html  dal.plugins.persistence.git.html  dal.plugins.persistence.html  dal.plugins.persistence.redis.html  dal.plugins.resources.file.html  dal.plugins.resources.html  dal.plugins.resources.redis.html  dal.plugins.schema.html  dal.plugins.schema.version10.html  dal.plugins.schema.version20.html  dal.scopes.html  dal.tools.html  dal.utils.html  dal.validation.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  (+2 more)
3.1/: .buildinfo  dal.api.html  dal.archive.html  dal.backup.html  dal.classes.common.html  dal.classes.filesystem.html  dal.classes.html  dal.classes.protocols.html  dal.classes.utils.html  dal.data.html  dal.data.shared.html  dal.db_handlers.html  dal.exceptions.html  dal.helpers.flow.html  dal.helpers.html  dal.html  dal.models.html  dal.movaidb.html  dal.plugins.classes.html  dal.plugins.html  dal.plugins.persistence.filesystem.html  dal.plugins.persistence.git.html  dal.plugins.persistence.html  dal.plugins.persistence.redis.html  dal.plugins.resources.file.html  dal.plugins.resources.html  dal.plugins.resources.redis.html  dal.plugins.schema.html  dal.plugins.schema.version10.html  dal.plugins.schema.version20.html  dal.scopes.html  dal.tools.html  dal.utils.html  dal.validation.html  genindex.html  index.html  modules.html  objects.inv  permissions.html  py-modindex.html  (+3 more)
3.2/: .buildinfo  dal.api.html  dal.archive.html  dal.backup.html  dal.classes.common.html  dal.classes.filesystem.html  dal.classes.html  dal.classes.protocols.html  dal.classes.utils.html  dal.data.html  dal.data.shared.html  dal.db_handlers.html  dal.exceptions.html  dal.helpers.flow.html  dal.helpers.html  dal.html  dal.models.html  dal.movaidb.html  dal.plugins.classes.html  dal.plugins.html  dal.plugins.persistence.filesystem.html  dal.plugins.persistence.git.html  dal.plugins.persistence.html  dal.plugins.persistence.redis.html  dal.plugins.resources.file.html  dal.plugins.resources.html  dal.plugins.resources.redis.html  dal.plugins.schema.html  (+16 more)
tests/unit/data/invalid/proj-duplicated-metadata/pkg_a/: package.xml
tests/unit/data/invalid/proj-duplicated-metadata/pkg_a/metadata/Node/: check_bool.json
tests/unit/data/invalid/proj-duplicated-metadata/pkg_b/: manifest.txt  package.xml
(+825 files in other folders)
